# pathfinder

./: Cargo.toml  README.md
c/: Cargo.toml  cbindgen.toml
c/src/: lib.rs
canvas/: Cargo.toml
color/src/: lib.rs
content/src/: gradient.rs  util.rs
demo/android/rust/: Cargo.toml
demo/android/rust/src/: lib.rs
demo/common/: Cargo.toml
demo/common/src/: device.rs  lib.rs  renderer.rs  ui.rs  window.rs
demo/native/: Cargo.toml
demo/native/src/: main.rs
examples/canvas_minimal/: Cargo.toml
examples/canvas_minimal/src/: main.rs
examples/canvas_moire/: Cargo.toml
examples/canvas_moire/src/: main.rs
examples/canvas_nanovg/: Cargo.toml
examples/canvas_nanovg/src/: main.rs
examples/canvas_text/: Cargo.toml
gpu/: Cargo.toml
gpu/src/: allocator.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: builder.rs  gpu_data.rs  paint.rs  scene.rs
renderer/src/concurrent/: scene_proxy.rs
renderer/src/gpu/: blend.rs  debug.rs  mod.rs  options.rs  perf.rs  renderer.rs  shaders.rs
renderer/src/gpu/d3d11/: mod.rs  renderer.rs  shaders.rs
renderer/src/gpu/d3d9/: mod.rs  renderer.rs  shaders.rs
resources/: Cargo.toml  MANIFEST  build.rs
resources/shaders/: blit.wgsl  clear.wgsl  demo_ground.wgsl  reproject.wgsl  stencil.wgsl
resources/shaders/d3d11/: bin.wgsl  bound.wgsl  dice.wgsl  fill.wgsl  propagate.wgsl  sort.wgsl  tile.wgsl
resources/shaders/d3d9/: fill.wgsl  tile.wgsl  tile_clip_combine.wgsl  tile_clip_copy.wgsl  tile_copy.wgsl
resources/shaders/debug/: solid.wgsl  texture.wgsl
simd/src/: lib.rs
svg/: Cargo.toml
text/: Cargo.toml
ui/: Cargo.toml
ui/src/: lib.rs
utils/svg-to-skia/src/: main.rs
