[workspace]
members = [
    "canvas",
    "color",
    "content",
    "demo/common",
    "demo/native",
    "examples/canvas_minimal",
    "geometry",
    "gpu",
    "export",
    "renderer",
    "resources",
    "simd",
    "svg",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
]

default-members = [
    "canvas",
    "content",
    "demo/common",
    "demo/native",
    "examples/canvas_minimal",
    "geometry",
    "gpu",
    "export",
    "renderer",
    "simd",
    "svg",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
]

[patch.crates-io]
pathfinder_geometry = { path = "geometry" }
pathfinder_simd = { path = "simd" }

[patch."https://github.com/servo/pathfinder"]
pathfinder_content = { path = "content" }
pathfinder_color = { path = "color" }
pathfinder_geometry = { path = "geometry" }
pathfinder_renderer = { path = "renderer" }
pathfinder_simd = { path = "simd" }
