[workspace]
members = [
    "c",
    "canvas",
    "color",
    "content",
    "demo/android/rust",
    "demo/common",
    "demo/native",
    "examples/canvas_minimal",
    "examples/canvas_moire",
    "examples/canvas_nanovg",
    "examples/canvas_text",
    "geometry",
    "gpu",
    "export",
    "renderer",
    "resources",
    "simd",
    "svg",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
]

default-members = [
    "canvas",
    "content",
    "demo/common",
    "demo/native",
    "geometry",
    "gpu",
    "export",
    "renderer",
    "resources",
    "simd",
    "svg",
    "text",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "utils/convert",
]

[patch.crates-io]
pathfinder_geometry = { path = "geometry" }
pathfinder_simd = { path = "simd" }

[resolver]
version = "2"

[workspace.dependencies]
windows = "0.62.2"

[patch."https://github.com/servo/pathfinder"]
pathfinder_content = { path = "content" }
pathfinder_color = { path = "color" }
pathfinder_geometry = { path = "geometry" }
pathfinder_renderer = { path = "renderer" }
pathfinder_simd = { path = "simd" }
