[package]
name = "pathfinder_gpu"
version = "0.6.0"
edition = "2021"
authors = ["Patrick Walton <pcwalton@mimiga.net>", "floppyhammer <tannhauser_chen@outlook.com>"]
description = "A simple GPU memory management library"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"

[dependencies]
bitflags = "1.0"
fxhash = "0.2"
half = "1.5"
log = "0.4"
wgpu = "0.15.1"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]

[dependencies.pathfinder_color]
path = "../color"
version = "0.5"

[dependencies.pathfinder_geometry]
path = "../geometry"
version = "0.5"

[dependencies.pathfinder_resources]
path = "../resources"
version = "0.5"

[dependencies.pathfinder_simd]
path = "../simd"
version = "0.5"
