[package]
name = "demo"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]

[features]
pf-no-simd = ["pathfinder_simd/pf-no-simd"]

[dependencies]
color-backtrace = "0.3"
lazy_static = "1"
nfd = "0.0.4"
pretty_env_logger = "0.4"
wgpu = { version = "29.0.3" }
pollster = "0.3"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.pathfinder_demo]
path = "../common"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_resources]
path = "../../resources"

[dependencies.pathfinder_simd]
path = "../../simd"

[dependencies.winit]
version = "0.29"

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.3"
io-surface = "0.12"
objc = "0.2"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.3"
